# rust_rocket_react_test

./: .babelrc  .env  Cargo.toml  docker-compose.yml  package.json  webpack.config.js
docker/app/: DockerFile
docker/web/: DockerFile  nginx.conf
migrations/2019-07-03-061437_create_stagings/: down.sql  up.sql
migrations/2019-07-03-084149_users_stagings/: down.sql  up.sql
migrations/2019-08-16-082106_add_busy_flag/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs  structs.rs
src/js/: index.js
src/js/components/: IndexPage.jsx
