[package]
name = "something"
version = "0.1.0"
authors = ["Eugene Nikolaev <satorsight@gmail.com>"]

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"

diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rocket-include-static-resources = "0.9.2"
